--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -22,13 +22,15 @@
     {% if messages %}
     <section id="alerts">
         {% for msg in messages %}
-            <!-- all django message tags mirror bootstrap, except error/danger -->
-            <aside class="alert {% if msg.tags == 'error' %}alert-danger{% else %}alert-{{ msg.tags }}{% endif %} text-center" role="alert">
-                <h3>{{ msg }}</h3>
-            </aside>
+        <!-- all django message tags mirror bootstrap, except error/danger -->
+        <aside
+            class="alert {% if msg.tags == 'error' %}alert-danger{% else %}alert-{{ msg.tags }}{% endif %} text-center"
+            role="alert">
+            <h3>{{ msg }}</h3>
+        </aside>
         {% endfor %}
     </section>
-{% endif %}
+    {% endif %}
 
     <header class="navbar-heading bg-light z-3 ">
         <div class="container">
@@ -41,7 +43,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'home' %}"> Home <span class="visually-hidden"> (current)</span></a>
+                            <a class="nav-link" href="{% url 'home' %}"> Home <span class="visually-hidden">
+                                    (current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'about' %}">About </a>
@@ -56,11 +59,34 @@
 
                             {% endif %}
                         </li>
+
+                        {% if user.is_authenticated %}
+                        {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'create_event'   %}"> Create Event</a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li>
+
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register_public' %}">Sign Up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register_instructor' %}">Sign Up as an Instructor</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register_government' %}">Sign Up as an Official</a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
-        </div>
-
     </header>
 
     {% block content %}
@@ -141,7 +167,7 @@
                 </div>
             </div>
         </div>
-    </div>
+        </div>
     </footer>
     <!-- Loading FontAwesome and Bootstrap scripts -->
     <script src="https://kit.fontawesome.com/11665d5c0d.js" crossorigin="anonymous"></script>
