Remove bug displaying Hi, on home page

--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -32,7 +32,7 @@
     </section>
     {% endif %}
 
-    <header class="navbar-heading bg-light z-3 ">
+    <header class="navbar-heading w-100 bg-light z-3 ">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light ">
                 <a class="navbar-brand" href="{% url 'home' %}"> Community Center </a>
