--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -26,6 +26,7 @@
         <div class="col-8 container mt-4 d-none  d-md-flex justify-content-center ">
             <h1 class="h1 text-center"> Welcome to the Community Center</h1>
         </div>
+        {% if user.is_authenticated %}
         <div class="col-8 container mt-4 d-none  d-md-flex justify-content-center ">
             <h3 class="h3 leading ">
                 <!-- Check if user is authenticated -->
@@ -34,7 +35,9 @@
                 Hi , {{ user.profile }}
                 <!-- Display 'Create an Event' option for certain user roles -->
             </h3>
+        
         </div>
+        {% endif %}
 
 
 
