--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -307,6 +307,7 @@
         {% endif %}
     </div> <!-- ... Content for displaying user's balance and recent transactions ... -->
     {% if user.is_authenticated %}
+    {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GENERAL_PUBLIC' %}
     <div class="container mt-5 mb-3 pb-4 ">
         <div class="row align-items-start carousel-inner border-0 rounded m-1">
             <div class="col-8 col-md-4">
@@ -324,12 +325,15 @@
                 </ul>
 
             </div>
+            
             <div class="d-none d-md-inline-block col-8">
                 <canvas id="transactionGraph" width='300' height="150"></canvas>
             </div>
-            {% endif %}
+            
         </div>
     </div>
+    {% endif %}
+    {% endif %}
     </div>
     </div>
 </main><!-- ... Script for initializing the chart ... -->
@@ -338,14 +342,17 @@
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const transactionDates = JSON.parse('{{ transaction_dates|safe }}');
-        const transactionAmounts = JSON.parse('{{ transaction_amounts|safe }}');
+        let transactionAmounts = JSON.parse('{{ transaction_amounts|safe }}');
+        for (let i = 1; i < transactionAmounts.length; i++) {
+        transactionAmounts[i] += transactionAmounts[i - 1];
+    }
         const ctx = document.getElementById('transactionGraph').getContext('2d');
         const transactionGraph = new Chart(ctx, {
             type: 'line',
             data: {
                 labels: transactionDates,
                 datasets: [{
-                    label: 'Transaction History',
+                    label: 'Cumulative Transaction History',
                     data: transactionAmounts,
                     backgroundColor: 'rgba(54,162,235,0.2)',
                     borderColor: 'rgba(54,162,235,1)',
