--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -333,18 +333,21 @@
         </div>
     </div>
     {% endif %}
-    {% endif %}
+    
     </div>
 
-    {% if user.is_authenticated and user.profile.role == 'GOVERNMENT' %}
-    <div class="container mt-5 mb-3 pb-4 ">
-        <div class="row align-items-start carousel-inner border-0 rounded m-1">
-            <div class="col-12">
-                <h2 class="text-center">Event Participation Overview</h2>
-                <canvas id="eventParticipationGraph" width="400" height="200"></canvas>
+    {% if user.profile.role == 'GOVERNMENT' %}
+   
+    <div class="row align-items-center justify-content-center border-0 rounded m-1">
+        <div class="col-12 col-md-8 col-lg-6">
+            <h2 class="text-center">Event Participation Overview</h2>
+            <div class="chart-container" style="position: relative; height:40vh; width:40vw">
+                <canvas id="eventParticipationGraph"></canvas>
             </div>
         </div>
     </div>
+    
+    {% endif %}
     {% endif %}
 </main><!-- ... Script for initializing the chart ... -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -355,7 +358,7 @@
         let transactionDates = JSON.parse('{{ transaction_dates|safe }}' || '[]');
         let transactionAmounts = JSON.parse('{{ transaction_amounts|safe }}' || '[]');
         let eventTitles = JSON.parse('{{ event_titles|safe }}' || '[]');
-        let participationCounts = JSON.parse('{{ participation_counts|safe }}' || '[]');
+        let bookingCounts = JSON.parse('{{ booking_counts|safe }}' || '[]');
 
         // Initialize the transaction graph if the canvas exists
         const transactionGraphCanvas = document.getElementById('transactionGraph');
@@ -413,11 +416,12 @@
                 data: {
                     labels: eventTitles,
                     datasets: [{
-                        label: 'Event Participation',
+                        label: 'Event Bookings',
                         data: bookingCounts,
                         backgroundColor: 'rgba(54,162,235,0.2)',
                         borderColor: 'rgba(54,162,235,1)',
-                        borderWidth: 1
+                        borderWidth: 1,
+                        fill: true,
                     }]
                 },
                 options: {
@@ -425,7 +429,7 @@
                         y: {
                             beginAtZero: true,
                             ticks: {
-                                stepSize: 1 // Ensures that even zero counts are shown
+                                stepSize: 1
                             }
                         }
                     },
@@ -435,6 +439,7 @@
             });
         }
     });
+
 </script>
 
 
